kubernetes/oci/compute/cluster/.argocd-state/argocd/argo-cd/templates/argocd-notifications/metrics.yaml
---
# Source: argo-cd/templates/argocd-notifications/metrics.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-notifications-controller-metrics
  namespace: argocd
  labels:
    helm.sh/chart: argo-cd-10.10.2
    app.kubernetes.io/name: argocd-metrics
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/component: notifications-controller
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/version: "v3.5.4"
spec:
  type: ClusterIP  
  selector:
      app.kubernetes.io/name: argocd-notifications-controller
      app.kubernetes.io/instance: argocd
  ports:
  - name: http-metrics
    protocol: TCP
    port: 9001
    targetPort: metrics
